--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
             <div th:replace="fragments/layout::header"></div>
             <div th:replace="fragments/layout::jumbotron"></div>
             <div class="row">
-                <div class="col-lg-12 bg-info">
+                <div class="col-sm-12 bg-info">
                     <p>Sugerencias especiales</p>
                     <p>Sugerencias especiales</p>
                     <p>Sugerencias especiales</p>
