--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,26 +4,32 @@
       lang="en">
     <head th:replace="fragments/layout::head('Login')"></head>
     <body>
-        <header th:replace="fragments/layout::header"></header>
-        <div class="container">
+        <div class="container-fluid">
+            <header th:replace="fragments/layout::header"></header>
             <div th:replace="fragments/layout::underHead('Login')"></div>
-            <form class="needs-validation" novalidate th:action="@{/login}" method="POST" action="#">
-                <div class="form-group">
-                    <label for="email">E-mail:</label>
-                    <input class="form-control" type="email" id="email" placeholder="enter email" name="username" required>
-                    <div class="invalid-feedback">Please fill out this field with your email</div>
+            <div class="row">
+                <div class="col-sm-3 bg-white"></div>
+                <div class="col-sm-6 bg-light">
+                    <form class="needs-validation" novalidate th:action="@{/login}" method="POST" action="#">
+                        <div class="form-group">
+                            <label for="email">E-mail:</label>
+                            <input class="form-control" type="email" id="email" placeholder="enter email" name="username" required>
+                            <div class="invalid-feedback">Please fill out this field with your email</div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password:</label>
+                            <input class="form-control" type="password" id="password" placeholder="enter password" name="password" required>
+                            <div class="invalid-feedback">Please fill out this field</div>
+                        </div>
+                        <button class="btn btn-primary" type="submit">Login</button>
+                    </form>
+                    <br/>
+                    <span>New? Click <a th:href="@{/newUser}">here</a> to register.</span>
                 </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input class="form-control" type="password" id="password" placeholder="enter password" name="password" required>
-                    <div class="invalid-feedback">Please fill out this field</div>
-                </div>
-                <button class="btn btn-primary" type="submit">Login</button>
-            </form>
-            <br/>
-            <span>New? Click <a th:href="@{/newUser}">here</a> to register.</span>
+                <div class="col-sm-3 bg-white"></div>
+            </div>
+            <footer th:replace="fragments/layout::footer"></footer>
         </div>
-        <footer th:replace="fragments/layout::footer"></footer>
         <script th:replace="fragments/scripts::disableFormSubmissionOnInvalidField"></script>
     </body>
 </html>
