js scripts moved to static folder

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -38,6 +38,6 @@
             <div th:replace="fragments/components::purchaseButton('user','addPurchase')"></div>
         </div>
         <footer th:replace="fragments/layout::footer"></footer>
-        <script th:replace="fragments/scripts::enableTooltips"></script>
+        <script th:src="@{/js/enableTooltips.js}"></script>
     </body>
 </html>
