--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -28,6 +28,6 @@
             </table>
         </div>
         <footer th:replace="fragments/layout::footer"></footer>
-        <script th:replace="fragments/scripts::enableTooltips"></script>
+        <script th:src="@{/js/enableTooltips.js}"></script>
     </body>
 </html>
