--- a/src/main/resources/templates/editCategory.html
+++ b/src/main/resources/templates/editCategory.html
@@ -36,6 +36,6 @@
             </form>
         </div>
         <footer th:replace="fragments/layout::footer"></footer>
-        <script th:replace="fragments/scripts::disableFormSubmissionOnInvalidField"></script>
+        <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
     </body>
 </html>
