--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -28,6 +28,6 @@
             </form>
             <footer th:replace="fragments/layout::footer"></footer>
         </div>
-        <script th:replace="fragments/scripts::disableFormSubmissionOnInvalidField"></script>
+        <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
     </body>
 </html>
