--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -33,6 +33,6 @@
             </table>
         </div>
         <footer th:replace="fragments/layout::footer"></footer>
-        <script th:replace="fragments/scripts::enableTooltips"></script>
+        <script th:src="@{/js/enableTooltips.js}"></script>
     </body>
 </html>
