--- a/src/main/resources/templates/editBook.html
+++ b/src/main/resources/templates/editBook.html
@@ -210,9 +210,9 @@
             </div>
             <footer th:replace="fragments/layout::footer"></footer>
         </div>
-        <script th:replace="fragments/scripts::disableFormSubmissionOnInvalidField"></script>
-        <script th:replace="fragments/scripts::isbnChecksum"></script>
-        <script th:replace="fragments/scripts::binaryInputSwitch"></script>
-        <script th:replace="fragments/scripts::manageAuthors"></script>
+        <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
+        <script th:src="@{/js/isbnChecksum.js}"></script>
+        <script th:src="@{/js/binaryInputSwitch.js}"></script>
+        <script th:src="@{/js/manageAuthors.js}"></script>
     </body>
 </html>
