--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,6 +30,6 @@
             </div>
             <footer th:replace="fragments/layout::footer"></footer>
         </div>
-        <script th:replace="fragments/scripts::disableFormSubmissionOnInvalidField"></script>
+        <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
     </body>
 </html>
