all cart operations with ajax

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -73,7 +73,7 @@
                                     </strong>
                                 </div>
                                 <div>
-                                    <button class="addBookToCart btn btn-outline-dark btn-sm" th:id="${book.id}" data-toggle="tooltip" title="Add to Cart">
+                                    <button class="addBook btn btn-outline-dark btn-sm" th:id="'ab-' + ${book.id}" data-toggle="tooltip" title="Add to Cart">
                                         <i class="fas fa-cart-plus mx-3 fa-lg"></i>
                                     </button>
                                 </div>
