--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -22,15 +22,21 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="item : ${items}">
+                <tr th:id="'i-' + ${item.id}" th:each="item : ${items}">
                     <td><span th:text="${item.book.isbn}">isbn</span></td>
                     <td><span th:text="${item.book.title}">title</span></td>
                     <td><img th:src="@{/image/{id}(id=${item.book.image.id})}" style="width:64px;height:64px;"></td>
-                    <td><span th:text="${item.quantity}">quantity</span></td>
+                    <td><span th:id="'iq-' + ${item.id}" th:text="${item.quantity}">quantity</span></td>
                     <td>
-                        <a th:href="@{/user/addBook/{id}(id=${item.book.id})}" data-toggle="tooltip" title="Increment Quantity"><i class="far fa-plus-square"></i></a><br/>
-                        <a th:href="@{/user/removeBook/{id}(id=${item.book.id})}" data-toggle="tooltip" title="Decrement Quantity"><i class="far fa-minus-square"></i></a><br/>
-                        <a th:href="@{/user/removeItem/{id}(id=${item.id})}" data-toggle="tooltip" title="Delete Item"><i class='fas fa-trash-alt' style='color:red'></i></a>
+                        <button class="incrementItem" th:id="'ii-' + ${item.id}" data-toggle="tooltip" title="Increment Quantity">
+                            <i class="far fa-plus-square"></i>
+                        </button><br/>
+                        <button class="decrementItem" th:id="'di-' + ${item.id}" data-toggle="tooltip" title="Decrement Quantity">
+                            <i class="far fa-minus-square"></i>
+                        </button><br/>
+                        <button class="removeItem" th:id="'ri-' + ${item.id}" data-toggle="tooltip" title="Delete Item">
+                            <i class='fas fa-trash-alt' style='color:red'></i>
+                        </button>
                     </td>
                 </tr>
                 </tbody>
@@ -39,5 +45,6 @@
         </div>
         <footer th:replace="fragments/layout::footer"></footer>
         <script th:src="@{/js/enableTooltips.js}"></script>
+        <script th:src="@{/js/ajaxCart.js}"></script>
     </body>
 </html>
