--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -36,6 +36,12 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-white font-weight-bold" th:href="@{/home}">Home</a>
                                 </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">Categories</a><!--id="navbardrop"-->
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item" th:href="@{/books/{categoryId}(categoryId=${cat.id})}" th:text="${cat.name}" th:each="cat : ${mainCategories}">Category Name</a>
+                                    </div>
+                                </li>
                                 <!--user dropdown-->
                                 <li class="nav-item dropdown" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                     <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
@@ -96,7 +102,7 @@
             </div>
         </div>
 
-        <div class="row" th:fragment="jumbotron">
+        <!--<div class="row" th:fragment="jumbotron">
             <div class="col-sm-12 bg-white">
                 <div class="jumbotron jumbotron-fluid mb-0">
                     <h1 class="text-center">
@@ -109,7 +115,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <div class="row" th:fragment="underHead(text)">
             <div class="col-sm-12 bg-white">
