--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -39,7 +39,7 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">Categories</a><!--id="navbardrop"-->
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" th:href="@{/books/{categoryId}(categoryId=${cat.id})}" th:text="${cat.name}" th:each="cat : ${mainCategories}">Category Name</a>
+                                        <a class="dropdown-item" th:href="@{/books/search/{categoryId}(categoryId=${cat.id})}" th:text="${cat.name}" th:each="cat : ${mainCategories}">Category Name</a>
                                     </div>
                                 </li>
                                 <!--user dropdown-->
