--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -10,8 +10,10 @@
 
             <!-- main content -->
             <div class="row mt-4">
+                <!-- left margin
+                <div class="col-sm-1"></div>-->
                 <!-- SEARCH CRITERIA  -->
-                <div class="col-sm-4">
+                <div class="col-sm-3 my-3">
                     <button class="accordion">Category</button>
                     <div class="panel">
                         <a class="dropdown-item" th:href="@{/books/search/{categoryId}(categoryId=${cat.id})}" th:text="${cat.name}" th:each="cat : ${childrenCategories}">Category Name</a>
@@ -63,37 +65,39 @@
                 </div>
                 <!-- SEARCH RESULTS  -->
                 <div class="col-sm-8">
-                    <div class="row d-flex align-content-stretch justify-content-between flex-wrap">
-                        <div class="card col-xs-12 col-sm-4 col-lg-2 m-2 p-0" th:each="book : ${books}">
-                            <a th:href="@{/book/{id}(id=${book.id})}"><img class="card-image card-img-top img-responsive" th:src="@{/image/{id}(id=${book.image.id})}"/></a>
-                            <div class="card-body">
-                                <a th:href="@{/book/{id}(id=${book.id})}"><p class="card-title text-responsive font-weight-bold" th:text="${book.title}">title</p></a>
-                                <div class="card-text">
-                                    <small th:each="author : ${book.authors}">
-                                        <span th:text="${author.lastName}">lastName</span>,
-                                        <span th:text="${author.firstName}">firstName</span>
-                                        <br/>
-                                    </small>
+                    <div class="row d-flex flex-column">
+                        <div class="col-sm-12" th:each="book : ${books}">
+                            <div class="row my-3">
+                                <div class="col-sm-3 bg-white">
+                                    <a th:href="@{/book/{id}(id=${book.id})}"><img class="img-fluid my-3" th:src="@{/image/{id}(id=${book.image.id})}"/></a>
                                 </div>
-                                <div class="card-text">
-                                    <small><span th:text="${book.category.name}">category</span></small>
+                                <div class="col-sm-6 bg-white">
+                                    <a th:href="@{/book/{id}(id=${book.id})}"><p class="text-responsive font-weight-bold mt-3" th:text="${book.title}">title</p></a>
+                                    <p><strong><span th:text="${book.authorsString}"></span></strong></p>
+                                    <p><small>Published by </small><strong><span th:text="${book.publisher.name}"></span></strong></p>
+                                    <p class="my-0"><small><span th:text="${book.language}"></span></small></p>
+                                    <p class="my-0"><small><span th:text="${book.category.name}"></span></small></p>
+                                    <p class="mb-3"><small>ISBN-<span th:text="${book.isbn}"></span></small></p>
                                 </div>
-                            </div>
-                            <div class="card-footer d-flex align-items-baseline">
-                                <div class="card-text mr-auto">
-                                    <strong>
-                                        <span th:text="${book.price}">price</span>€
-                                    </strong>
-                                </div>
-                                <div>
-                                    <button class="addBook btn btn-outline-info btn-sm" th:id="'ab-' + ${book.id}" data-toggle="tooltip" title="Add to Cart">
-                                        <i class="fas fa-cart-plus mx-1 fa-lg"></i>
-                                    </button>
+                                <div class="col-sm-3 bg-white">
+                                    <div class="row d-flex flex-column">
+                                        <div class="col-sm-12 my-3">
+                                            <a class="btn btn-outline-info btn-lg align-center" th:href="@{/user/addBook/{id}(id=${book.id})}" data-toggle="tooltip" title="Add to Cart">
+                                                <!--Add to Cart<i class="fas fa-cart-plus fa-2x"></i>-->
+                                                Add to Cart<i class="fas fa-cart-plus ml-2"></i>
+                                            </a>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <p><strong>EUR <span th:text="${book.price}"></span></strong></p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- right margin  -->
+                <div class="col-sm-1"></div>
             </div>
             <!-- layout::footer -->
             <div th:replace="fragments/layout::footer"></div>
