--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -35,13 +35,13 @@
 
         <!-- pagination links -->
         <div th:fragment="paginationLinks" class="d-flex justify-content-center" id="pagination">
-            <a class="btn btn-outline-info" id="pl-1">1</a>
-            <a class="btn btn-outline-info" id="pl-2">2</a>
-            <a class="btn btn-outline-info" id="pl-3">3</a>
-            <a class="btn btn-outline-info" id="pl-4">4</a>
-            <a class="btn btn-outline-info" id="pl-5">5</a>
-            <a class="btn btn-outline-info" id="pl-6">6</a>
-            <a class="btn btn-outline-info" id="pl-7">7</a>
+            <a class="btn btn-outline-info mx-1" id="pl-1">1</a>
+            <a class="btn btn-outline-info mx-1" id="pl-2">2</a>
+            <a class="btn btn-outline-info mx-1" id="pl-3">3</a>
+            <a class="btn btn-outline-info mx-1" id="pl-4">4</a>
+            <a class="btn btn-outline-info mx-1" id="pl-5">5</a>
+            <a class="btn btn-outline-info mx-1" id="pl-6">6</a>
+            <a class="btn btn-outline-info mx-1" id="pl-7">7</a>
         </div>
 
         <!-- pagination legend -->
