--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -66,7 +66,7 @@
                 <!-- SEARCH RESULTS  -->
                 <div class="col-sm-8">
                     <div class="row d-flex flex-column">
-                        <div class="col-sm-12" th:each="book : ${books}">
+                        <div class="col-sm-12" th:each="book : ${pageOfBooks}">
                             <div class="row my-3">
                                 <div class="col-sm-3 bg-white">
                                     <a th:href="@{/book/{id}(id=${book.id})}"><img class="img-fluid my-3" th:src="@{/image/{id}(id=${book.image.id})}"/></a>
