--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -36,12 +36,13 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-white font-weight-bold" th:href="@{/home}">Home</a>
                                 </li>
+                                <!--
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">Categories</a><!--id="navbardrop"-->
+                                    <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">Categories</a>id="navbardrop"
                                     <div class="dropdown-menu">
                                         <a class="dropdown-item" th:href="@{/books/search/{categoryId}(categoryId=${cat.id})}" th:text="${cat.name}" th:each="cat : ${mainCategories}">Category Name</a>
                                     </div>
-                                </li>
+                                </li>-->
                                 <!--user dropdown-->
                                 <li class="nav-item dropdown" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                     <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
