--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
                 <div class="col-sm-12 bg-white">
                     <div class="jumbotron jumbotron-fluid mb-0">
                         <h1 class="text-center">
-                            <span class="font-weight-bold">firstmarket</span><small>, where books belong</small>
+                            <span class="font-weight-bold text-dark">firstmarket</span><small>, where books belong</small>
                         </h1>
                         <div class="text-center" sec:authorize="hasRole('ADMIN')">
                             <h6><code class="text-info font-italic">
@@ -35,6 +35,27 @@
                             <div class="col-sm-4"></div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <!-- main categories -->
+            <div class="row">
+                <div class="col-sm-12">
+                    <!-- NavBar -->
+                    <nav class="navbar navbar-expand-sm p-0 m-0" style="background-color:#e9ecef">
+                        <!-- Toggler/collapsibe Button -->
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <!-- Navbar links -->
+                        <div class="collapse navbar-collapse" id="#collapsibleNavbar">
+                            <ul class="navbar-nav">
+                                <li class="nav-item" th:each="cat : ${mainCategories}">
+                                    <!--<a class="nav-link text-dark font-weight-bold" th:href="@{/books/search/{categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>-->
+                                    <a class="nav-link text-dark font-weight-bold" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name}">Category Name</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
                 </div>
             </div>
             <!-- books -->
