price intervals refactor

--- a/src/main/resources/templates/searchResults.html
+++ b/src/main/resources/templates/searchResults.html
@@ -14,31 +14,15 @@
                 <div class="col-sm-1"></div>-->
                 <!-- SEARCH CRITERIA  -->
                 <div class="col-sm-3 my-3">
-                    <button class="accordion" id="accCategory">Category</button>
+                    <button class="accordion" id="category-acc">Category</button>
                     <div class="panel">
                         <a class="dropdown-item" th:href="@{/books?categoryId={categoryId}(categoryId=${cat.id})}" th:text="${cat.name}" th:each="cat : ${childrenCategories}">Category Name</a>
                     </div>
                     <button class="accordion">Price</button>
                     <div class="panel">
-                        <div class="custom-control custom-checkbox my-3">
-                            <input class="custom-control-input" type="checkbox" id="pr-0" />
-                            <label class="custom-control-label" for="pr-0">€ 0-5</label>
-                        </div>
-                        <div class="custom-control custom-checkbox my-3">
-                            <input class="custom-control-input" type="checkbox" id="pr-1" />
-                            <label class="custom-control-label" for="pr-1">€ 5-10</label>
-                        </div>
-                        <div class="custom-control custom-checkbox my-3">
-                            <input class="custom-control-input" type="checkbox" id="pr-2" />
-                            <label class="custom-control-label" for="pr-2">€ 10-15</label>
-                        </div>
-                        <div class="custom-control custom-checkbox my-3">
-                            <input class="custom-control-input" type="checkbox" id="pr-3" />
-                            <label class="custom-control-label" for="pr-3">€ 15-40</label>
-                        </div>
-                        <div class="custom-control custom-checkbox my-3">
-                            <input class="custom-control-input" type="checkbox" id="pr-4" />
-                            <label class="custom-control-label" for="pr-4">€ 40 or more</label>
+                        <div class="custom-control custom-checkbox my-3" th:each="price : ${prices}">
+                            <input class="custom-control-input" type="checkbox" th:id="'pr-' + ${price.ordinal()}" />
+                            <label class="custom-control-label" th:for="'pr-' + ${price.ordinal()}" th:text="${price.getText()}">€ interval</label>
                         </div>
                     </div>
                     <button class="accordion">Author</button>
@@ -58,8 +42,8 @@
                     <button class="accordion">Language</button>
                     <div class="panel">
                         <div class="custom-control custom-checkbox my-3" th:each="language : ${languages}">
-                            <input class="custom-control-input" type="checkbox" th:id="'la-' + ${language.name()}" />
-                            <label class="custom-control-label" th:for="'la-' + ${language.name()}" th:text="${language.name()}">Language</label>
+                            <input class="custom-control-input" type="checkbox" th:id="'la-' + ${language.ordinal()}" />
+                            <label class="custom-control-label" th:for="'la-' + ${language.ordinal()}" th:text="${language.name()}">Language</label>
                         </div>
                     </div>
                 </div>
