-added search query input to searchResults.html -added multiple pagination legend

--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -45,9 +45,9 @@
         </div>
 
         <!-- pagination legend -->
-        <p th:fragment="paginationLegend" class="mt-2 text-center text-info">
+        <p class="my-0" th:fragment="paginationLegend">
             <small>
-                from <span id="begin">1</span> to <span id="end">30</span> of <span id="total">5000</span>
+                from <span class="paginationBegin">1</span> to <span class="paginationEnd">30</span> of <span class="paginationTotal">5000</span>
             </small>
         </p>
 
